k8s/helm/sonarqube/ingress-sonar.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarqube-ingress
  namespace: sonarqube
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/secure-backends: "true"
    
spec:
  ingressClassName: nginx
  rules:
  - host: sonarqube.atech-bot.click
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: sonarqube-sonarqube
            port:
              number: 9000
  tls:
  - hosts:
    - sonarqube.atech-bot.click
    secretName: sonarqube-tls
